force-app/src/objects/ffps_vat__VAT_Return_Report_Summary_Line__c.object
<CustomObject>
    <fields>
        <fullName>ffps_vat__Line_Description__c</fullName>
        <formula>ffps_vat__VAT_Report_Line_Definition__r.ffps_vat__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_vat__Net_Reported__c</fullName>
        <label>Net Reported</label>
        <summarizedField>ffps_vat__VAT_Report_Line__c.ffps_vat__Net_Reported__c</summarizedField>
        <summaryForeignKey>ffps_vat__VAT_Report_Line__c.ffps_vat__VAT_Report_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffps_vat__VAT_Report_Line_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VAT Report Line Definition</label>
        <referenceTo>ffps_vat__VAT_Report_Line_Definition__c</referenceTo>
        <relationshipLabel>VAT Return Report Sumary Lines</relationshipLabel>
        <relationshipName>VAT_Return_Report_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_vat__VAT_Reported__c</fullName>
        <label>VAT Reported</label>
        <summarizedField>ffps_vat__VAT_Report_Line__c.ffps_vat__VAT_Reported__c</summarizedField>
        <summaryForeignKey>ffps_vat__VAT_Report_Line__c.ffps_vat__VAT_Report_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffps_vat__VAT_Return_Report__c</fullName>
        <label>VAT Return Report</label>
        <referenceTo>ffps_vat__VAT_Return_Report__c</referenceTo>
        <relationshipLabel>VAT Return Report Sumary Lines</relationshipLabel>
        <relationshipName>VAT_Return_Report_Sumary_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>VAT Return Report Summary Line</label>
    <nameField>
        <label>VAT Return Report Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VAT Return Report Summary Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>